add metabox with boot_format

--- a/css/lgbc_admin_style.css
+++ b/css/lgbc_admin_style.css
@@ -7,19 +7,28 @@
     text-align: center;
     margin-bottom: 25px;
 }
+
 .lgbc_settings_block_left,
 .lgbc_settings_block_middle,
-.lgbc_settings_block_right{
+.lgbc_settings_block_right {
     float: left;
 }
+
 .lgbc_settings_block_left {
     width: 49%;
 
 }
-.lgbc_settings_block_middle{
+
+.lgbc_settings_block_middle {
     width: 2%;
     font-size: 0px;
 }
-.lgbc_settings_block_right{
+
+.lgbc_settings_block_right {
     width: 49%;
+}
+
+.metabox_label {
+    width: 160px;
+    display: inline-block;
 }
