--- a/css/lgbc_admin_style.css
+++ b/css/lgbc_admin_style.css
@@ -32,3 +32,9 @@
     width: 160px;
     display: inline-block;
 }
+.hcf_box{
+    display: grid;
+    grid-template-columns: max-content 1fr;
+    grid-row-gap: 10px;
+    grid-column-gap: 20px;
+}
