--- a/css/lgbc_style.css
+++ b/css/lgbc_style.css
@@ -5,7 +5,22 @@ p.schniecke-klasse {
     display: block;
 }
 
-.lgbc_book_cover img {
-    width: 200px;
+.lgbc_book {
+    box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
+    padding: 25px;
 }
 
+.lgbc_grid_0 {
+    margin-bottom: 25px;
+    border-radius: 8px;
+    display: flex;
+    flex-wrap: wrap;
+}
+
+.lgbc_grid_0 .lgbc_book_cover {
+    flex: 30%;
+}
+
+.lgbc_grid_0 .lgbc_book_content {
+    flex: 70%;
+}
